fix z-index

--- a/packages/frontend/src/assets/css/quime.css
+++ b/packages/frontend/src/assets/css/quime.css
@@ -72,6 +72,7 @@ nav {
   width: 100%;
   height: 48px;
   background: var(--color1);
+  z-index: 1;
 }
 
 nav ul {
@@ -130,7 +131,6 @@ nav ul li a.focus, nav ul li > div.focus {
   background: var(--white);
   text-indent: 10px;
   border-style: none;
-  z-index: -1;
 }
 
 .fixed-select2 {
@@ -142,7 +142,6 @@ nav ul li a.focus, nav ul li > div.focus {
   background: var(--white);
   text-indent: 10px;
   border-style: none;
-  z-index: -1;
 }
 
 .margin-menu1 {
